--- a/public/assets/mockup/css/style.css
+++ b/public/assets/mockup/css/style.css
@@ -278,7 +278,7 @@ button:hover {
 
 
 /* ======== START -- SIGNUP STYLES ========= */
-.signup-container, .login-container, .artist-update-profile-container {
+.signup-container, .login-container, .artist-update-profile-container, .buyer-single-post-container {
   margin: auto;
   width: 80%;
   padding-top: 40px;
@@ -329,7 +329,7 @@ input {
   max-width: 800px;
 }
 
-.buyer-signup-title, .artist-signup-title, .login-title, .artist-update-title {
+.buyer-signup-title, .artist-signup-title, .login-title, .artist-update-title, .buyer-comment-title {
   text-align: center;
   font-weight: 400;
   font-size: 42px;
@@ -347,7 +347,7 @@ input {
   padding-bottom: 25px;
 }
 
-.form-container {
+.form-container, .buyer-comment-form{
   position: relative;
   background-color: white;
   box-shadow: 0px 5px 11px rgba(110, 159, 183, 0.2);
@@ -445,6 +445,145 @@ input {
 }
 /* END -- SIGNUP STYLES */
 
+
+/* ========= ARTIST PROFILE PAGE ========== */
+.artist-profile-container, .profile-comments-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto 30px auto;
+  width: 80%;
+  height: auto;
+  justify-content: center;
+  padding-top: 50px;
+}
+.profile-comments-container {
+  padding-top: 0;
+  margin-bottom: 55px;
+}
+
+.comments-container {
+  margin: auto;
+  width: 100%;
+  justify-content: center;
+  background-color: white;
+  box-shadow: 0px 5px 11px rgba(110, 159, 183, 0.2);
+  padding: 35px;
+  border-radius: 10px;
+}
+
+.profile-container {
+  position: relative;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0px 5px 11px rgba(110, 159, 183, 0.2);
+  padding: 35px;
+  border-radius: 10px;
+}
+
+.artist-name {
+  font-size: 44px;
+}
+
+.profile-heading {
+  font-weight: 400;
+  font-size: 20px;
+  color: var(--lt-gray);
+}
+
+.comments-heading-container {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto 10px auto;
+  width: 80%;
+}
+
+#comments-title {
+  text-align: left;
+  padding-left: 35px;
+  color: var(--med-gray);
+}
+
+#url-link {
+  font-size: 24px;
+  color: var(--blue);
+  transition: all 0.3s;
+}
+
+#url-link:hover {
+  opacity: 0.6;
+}
+
+#full-profile-bio {
+  margin: 15px 0;
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+.descriptors {
+  display: flex;
+  margin: 20px 0;
+}
+
+.descriptors p {
+  padding-left: 7px;
+  font-size: 20px;
+}
+
+.title, .price {
+  display: flex;
+  margin-right: 35px;
+  align-items: center;
+}
+
+.size {
+  display: flex;
+  align-items: center;
+}
+
+#artwork-description {
+  margin-bottom: 15px;
+  font-size: 15px;
+  line-height: 22px;
+}
+
+.artwork-container {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.update-profile-button {
+  position: relative;
+  margin: 15px 0 0 0;
+  background-color: white;
+  border: 3px solid var(--blue);
+  color: var(--blue);
+  top: 241px;
+}
+
+.update-profile-button:hover, .submit-buyer-comment:hover {
+  background-color: var(--blue);
+  color: white;
+}
+
+.comment-title {
+  padding-bottom: 8px;
+}
+
+.buyer-comments {
+  font-style: italic;
+  font-size: 16px;
+}
+
+.submit-buyer-comment {
+  position: relative;
+  margin: 15px 0 0 0;
+  background-color: white;
+  border: 3px solid var(--blue);
+  color: var(--blue);
+}
 
 /* ========= FOOTER ========== */
 footer {
