--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,1 +1,16 @@
-;
+      <div class="buyer-single-post-container">
+        <h1 class="buyer-comment-title">Post A Comment!</h1>
+        <form action="/comment" class="buyer-comment-form">
+           <div>
+              <label for="comment-title">Comment Title</label>
+              <input type="title" id="comment-title" />
+            </div>
+            <div>
+              <label for="comment-text">Write A Comment</label>
+              <textarea name="comment-text" id="comment-text" rows="5"></textarea>
+            </div>
+            <div class="submit-comment">
+              <a href="/comment"><button class="submit-buyer-comment">Submit Comment</button></a>
+            </div>
+        </form>
+      </div>
